# 585_CircuiTron

./: .clang-format  .gitignore  CMakeLists.txt  Credits  Credits.txt  README.md  ReadMe.txt
.github/workflows/: cmake.yml
assets/: AI_waypoints_1.glb  Bike_Final.glb  Bike_P1.glb  Bike_P2.glb  Bike_P3.glb  Bike_P4.glb  The_Coffin_render.glb  Wall_blob.glb  horse.mtl  test.glb
assets/UI/: CircuiTron Title.psd  Font Test (Agency FB selected).psd  Main Menu (hilighted).psd  Main Menu (unselected).psd  Options (hilighted).psd  SI_Bar.psd  UIReadMe.txt  UI_3rd.psd  UI_4th.psd  UI_Place.psd
assets/UI/PSDs/: CircuiTron Title.psd  Exit (hilighted).psd  Exit (unselected).psd  Instructions.psd  Loading (hilighted).psd  Main Menu (hilighted).psd  Main Menu (unselected).psd  Options (hilighted).psd  Options (unselected).psd  P2_Wins..psd  P3_Wins..psd  P4_Wins..psd  Paused.psd  Play (hilighted).psd  Play (ready).psd  Play (unselected).psd  SI_Bar.psd  (+10 more)
lib/: lib.cmake  physx.cmake  physx.diff
lib/gl/: gl.cmake
shaders/: cubeSkybox.frag  default.vert  irradiance.frag  pbr.frag  quad.vert  rectSkybox.frag  reflection.frag  reflectionBRDF.frag  simple.frag  skybox.vert  test.frag  test.vert  testSkybox.frag
src/: game.hpp  main.cpp  util.hpp  window.cpp  window.hpp
src/Audio/: audioEngine.cpp  audioEngine.h  audioInstance.cpp  audioInstance.h
src/entities/: bike.cpp  bike.hpp  bike_ai.hpp  bike_player.hpp  camera.hpp  car.hpp  car_ai.hpp  car_player.hpp  checkpoint.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  fixed_orbit_cam.hpp  game.hpp  game_object.hpp  model_view.hpp  orbit_cam.hpp  track.hpp  ui_game.cpp  ui_game.h  ui_test.hpp  wall.hpp  wall_manager.hpp  wall_spawner.hpp
src/physics/: CTColliderCallback.cpp  CTColliderCallback.h  CTPVD.h  CTPrint.h  CTUtils.h  CTVehicle4WCreate.cpp  CTVehicleCreate.cpp  CTVehicleCreate.h  CTVehicleFilterShader.cpp  CTVehicleFilterShader.h  CTVehicleNoDriveCreate.cpp  CTVehicleSceneQuery.cpp  CTVehicleSceneQuery.h  CTVehicleTankCreate.cpp  CTVehicleTireFriction.cpp  CTVehicleTireFriction.h  physics.cpp  physics.h
src/profiler/: profiler.cpp  profiler.hpp
src/render/: core.cpp  core.hpp  debug.hpp  group.cpp  group.hpp  import.cpp  import.hpp  model.cpp  model.hpp  model_import.cpp  model_import.hpp  render.cpp  render.hpp  render_test.hpp  test.cpp  ui_util.hpp  wall.cpp  wall.hpp
(+40 files in other folders)
